--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -12,5 +12,7 @@
     background-color:#000;
     font-family:'Rubik';
     font-weight:600;
+
+    z-index:9;
     
 }
